<resources>
    <string name="app_name">Calculator_App</string>
    <string name="Calc_Text">""</string>
    <string name="digitSeven">7</string>
    <string name="digitEight">8</string>
    <string name="digitNine">9</string>
    <string name="digitDivide">/</string>
    <string name="digitFour">4</string>
    <string name="digitFive">5</string>
    <string name="digitSix">6</string>
    <string name="digitMultiply">*</string>
    <string name="digitOne">1</string>
    <string name="digitTwo">2</string>
    <string name="digitThree">3</string>
    <string name="digitMinus">-</string>
    <string name="digitZero">0</string>
    <string name="txtClear">Clear</string>
    <string name="digitAdd">+</string>
    <string name="txtEqual">=</string>
    <string name="txtDot">.</string>
</resources>