<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/Calc_Text"
        android:textColor="@color/black"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitSeven"
            android:textColor="@color/black"
            android:onClick="onDigit"
            android:textSize="20sp"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitEight"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitNine"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitDivide"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitFour"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitFive"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitSix"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_Multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitMultiply"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitOne"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitTwo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitThree"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitMinus"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtDot"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitZero"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/txtClear"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onClear"
            />
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digitAdd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtEqual"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            tools:ignore="NestedWeights" />
    </LinearLayout>


</LinearLayout>